--- a/examples/zoom2.html
+++ b/examples/zoom2.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Leaflet.LayerGroup.Conditional example: Zoom</title>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSAcSUIUOseddDm0cxnGQzxIR7vJgsLZbdLE3w=="
+        <title>ConditionalLayerGroup example: Zoom</title>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.css"
         crossorigin=""/>
         <style lang="css">
             #mapid { height: 700px; }
         </style>
+        <script type="importmap">
+          {
+            "imports": {
+              "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js",
+              "conditionalLayerGroup": "http://127.0.0.1:8000/ConditionalLayerGroup.js"
+
+          }
+        }
+        </script> 
     </head>
     <body>
-        <h1>Leaflet.LayerGroup.Conditional example: Zoom</h1>
+        <h1>ConditionalLayerGroup example: Zoom</h1>
         <h3>Try zooming in and out on the map</h3>
         <div id="mapid"></div>
 
-        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="BwHfrr4c9kmRkLw6iXFdzcdWV/PGkVgiIyIWLLlTSXzWQzxuSg4DiQUCpauz/EWjgk5TYQqX/kvn9pG1NpYfqg=="
-        crossorigin=""></script>
-        <script src="../leaflet.layergroup.conditional.js"></script>
-        <script lang="javascript">
+        <script type="module" lang="javascript">
+            import { LeafletMap, TileLayer, LayerGroup, Circle, Marker, Polygon } from "leaflet";
+            import ConditionalLayerGroup from "conditionalLayerGroup";
+
             // Set up the base map
-            const mymap = L.map('mapid').setView([53.505, 8.00], 4);
-            L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+            const mymap = new LeafletMap('mapid').setView([53.505, 8.00], 4);
+            new TileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
                             attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
                             maxZoom: 18,
                             id: 'mapbox/streets-v11',
@@ -45,11 +52,11 @@
                 const res = [];
                 for (let i = 0; i < count; i++) {
                     let myCoords = coords.map( (c) => c + (Math.random() - 0.5) * spread);
-                    res.push(L.marker(myCoords));
+                    res.push(new Marker(myCoords));
                 }
                 return res;
             }
-            const layer1 = L.layerGroup(centers.map((coords) => scatterMarkers(coords, 0.2)).reduce((a, b) => a.concat(b), []));
+            const layer1 = new LayerGroup(centers.map((coords) => scatterMarkers(coords, 0.2)).reduce((a, b) => a.concat(b), []));
 
             // Make a Layer with red circles around each city center
             const circleOptions = {
@@ -58,21 +65,21 @@
                 fillOpacity: 0.5,
                 radius: 20000
             };
-            const layer2 = L.layerGroup(centers.map((coords) => L.circle(coords, circleOptions)));
+            const layer2 = new LayerGroup(centers.map((coords) => new Circle(coords, circleOptions)));
 
             // Make a layer with green triangles joining groups of cities
             const polyOptions = {
                 color: "green",
                 weight: 1,
             };
-            const layer3 = L.layerGroup([
-                L.polygon(centers.slice(0,3), polyOptions),
-                L.polygon(centers.slice(3), polyOptions),
+            const layer3 = new LayerGroup([
+                new Polygon(centers.slice(0,3), polyOptions),
+                new Polygon(centers.slice(3), polyOptions),
             ]);
 
 
             // Make a conditional layergroup and add it to the map
-            const layerGroup = L.layerGroup.conditional();
+            const layerGroup = new ConditionalLayerGroup();
             
             // Add each of the three layers to the group with separate conditions. Then add the group to the map.
             layerGroup.addConditionalLayer((level) => level > 8, layer1)
