Fixed README conflict and example

--- a/examples/zoom2.html
+++ b/examples/zoom2.html
@@ -11,7 +11,7 @@
           {
             "imports": {
               "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js",
-              "conditionalLayerGroup": "http://127.0.0.1:8000/ConditionalLayerGroup.js"
+              "conditionalLayerGroup": "../ConditionalLayerGroup.js"
 
           }
         }
